compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__preceeding_zeros_float.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn main() {\n  09_179.1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn main() {
  09_179.1
}


----- COMPILED NIX
let main = { }: 9179.1; in { }
