compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__preceeding_zeros_float_const.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nconst x = 09_179.1\n"
snapshot_kind: text
---
----- SOURCE CODE

const x = 09_179.1


----- COMPILED NIX
let x = 9179.1; in { }
