compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__preceeding_zeros_int.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn main() {\n  09_179\n}\n"
---
let main = {}: 9179; in {}
